# udp-fpga

./: .gitignore  Makefile  README.md  build.tcl  custom.memh  deadbeef.memh  main.bit  main.xdc  place.checkpoint  route.checkpoint  sample_packets.txt  sample_packets2.txt  sample_packets3.txt  synthesis.checkpoint  test_udp_main.fst  tight_setup_hold_pins.txt  zeros.memh
hdl/: block_ram.sv  bytewise_block_ram.sv  edge_detector.sv  eth_parse.sv  i2s2.sv  leds.sv  main.sv  pulse_dividor.sv  pulse_generator.sv  uart_driver.sv  udp_main.sv
hdl/tests/: generate_frame.py  test_udp_main.sv
software/: CMakeLists.txt  README.md  build
software/src/: CMakeLists.txt  audio.cpp  ether  ether.cpp  noise.cpp
tests/: test_udp_main.py  test_udp_main.sv  tester.py
